# Circledetection

./: CMakeCache.txt  CMakeLists.txt  ImageProcessing  Makefile  README.md  adjust.cpp  adjust.h  gridalignment.cpp  gridalignment.h  image_processing.cpp  image_processing.h  main.cpp  readme.md  sorting.cpp  sorting.h
Circledetection/: ImageProcessing  adjust.cpp  adjust.h  cmake_install.cmake  image.cpp  image_processing.cpp
chipimg/: CMakeLists.txt  main.py  readme.md
chipimg/include/: Anchor.h  Anchor_4X.h  Anchor_GMY.h  Anchor_PG.h  Cluster.h  Cluster_4X.h  Cluster_GMY.h  Cluster_PG.h  Grid.h  Grid_4X.h  Grid_GMY.h  Grid_PG.h  MergeFilter.h  MergeFilter_4X.h  MergeFilter_GMY.h  MergeFilter_PG.h  OutputInterface_4X.h  OutputInterface_C5.h  OutputInterface_GMY.h  OutputInterface_PG.h  ShapeDetectionAPI_4X.h  ShapeDetectionAPI_C5.h  ShapeDetectionAPI_GMY.h  ShapeDetectionAPI_PG.h
chipimg/src/4X/: Anchor_4X.cpp  Cluster_4X.cpp  Grid_4X.cpp  MergeFilter_4X.cpp  OutputInterface_4X.cpp  ShapeDetectionAPI_4X.cpp  main_4X.cpp
chipimg/src/C5/: Anchor.cpp  Cluster.cpp  Grid.cpp  MergeFilter.cpp  OutputInterface_C5.cpp  ShapeDetectionAPI_C5.cpp  main_C5.cpp
chipimg/src/GMY/: Anchor_GMY.cpp  MergeFilter_GMY.cpp
chipimg/src/GMY copy/: Cluster_GMY.cpp  Grid_GMY.cpp  OutputInterface_GMY.cpp  ShapeDetectionAPI_GMY.cpp  main_GMY.cpp
chipimg/src/PG/: Anchor_PG.cpp  Cluster_PG.cpp  Grid_PG.cpp  MergeFilter_PG.cpp  OutputInterface_PG.cpp  ShapeDetectionAPI_PG.cpp  main_PG.cpp
chipimg/src/std/: OutputInterface_std.cpp  OutputInterface_std.h  detect  main.cpp  main1.cpp  main2.cpp  mainstd.cpp  readme.md
